--- a/styles.css
+++ b/styles.css
@@ -47,16 +47,22 @@
 .input-box {
   position: relative;
   width: 100%;
-  max-width: 500px;
+  max-width: 300px;
   min-height: 150px;
   background: #fff;
   color: #333;
   padding: 20px;
-  margin: 20px 0;
+  margin: 10px 0;
   outline: none;
   border-radius: 5px;
+  width: calc(33.33% - 15px);
 }
-
+.notes-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  max-width: 90%;
+}
 .input-box img {
   width: 25px;
   position: absolute;
@@ -93,6 +99,7 @@
     max-width: 100%;
     padding: 15px;
     min-height: 130px;
+    width: calc(50% - 15px);
   }
 
   .input-box img {
@@ -128,6 +135,7 @@
   .input-box {
     padding: 10px;
     min-height: 120px;
+    width: 100%;
   }
 
   .input-box img {
